# bsc-thesis

./: .gitignore  README.md  pyproject.toml
1_translate/: README.md  prompt.md
1_translate/input/: original.jsonl
1_translate/logs/: manifest.json
1_translate/logs/scenarios/: translate_0.jsonl  translate_1.jsonl  translate_10.jsonl  translate_100.jsonl  translate_101.jsonl  (+145 more)
1_translate/output/: manual_overrides.jsonl  translated.jsonl
1_translate/validation/: counterparty_labels.jsonl  rubric.md  spot_check_labels.jsonl
2_generate/: README.md
3_judge/: README.md
3_judge/validation/: labels_human.jsonl  rubric.md  sample.jsonl
4_analyze/: README.md
4_analyze/output/: cell_deception_rates.csv  disagreements.md  glmm_contrast_summary.csv  glmm_contrasts.csv  glmm_diagnostics.csv  judge_kappa.csv  qwen35_glmm_dual.csv  qwen35_loop_summary.csv  qwen35_responder_rates_by_framing.csv  qwen35_response_subset.csv  successor_pairs.csv  successor_pairs_long.csv  translator_kappa.csv
5_appendix/: README.md
5_appendix/qwen35_looping/: analysis.md  sample_trace.json
code/: README.md
code/analysis/: R_DEPENDENCIES.md  results_pipeline.R  show_disagreements.py  thesis_tables.py
code/bench/: README.md  __init__.py  dataset.py  generate.py  io.py  judge.py  llm.py  log.py  paths.py  run.py  summarize.py
code/judge_validation/: __init__.py  compute_kappa.py  label_ui.py  sample.py
code/translate/: apply_overrides.py  claude.py  overrides.py  run.py  runlog.py  translate.py
code/translate_validation/: compute_kappa.py  counterparty_check.py  spot_check.py
(+79 files in other folders)
